Revision history for Perl extension Module::Starter

{{$NEXT}}

        * Minimum perl version in generated distros (and Module::Starter) is 5.8.3
        * GH #25: Multiple authors are now supported. (Hunter McMillen)
        * GH #84: `Module::Starter::Simple::create_distro()` now returns files created.
        * Add `--github` option with issue tracker in README/POD, replacing CPANRatings
         (Dimitrios Kechagias)
        * Remove link to CPANRatings (lnation)

1.78      2025-05-04 04:54:03 EDT
        * Update LICENSE text

1.77      2020-09-05 17:20:43 EDT
        * Replace usage of ExtUtils::Command with File::Path
        * Clean up test file shebangs and remove pointless -T
        * GH#76: Remove references to AnnoCPAN from default module templates
        * GH#72: Convert distribution tooling to Dist::Zilla

1.76    Mon Mar 11 14:49:14 EDT 2019
        * GH#68: Default module templates will now use test_requires where appropriate (Dan Book)
        * GH#70: License metadata and blurbs are now handled by Software::License (Dan Book)
        * GH#70: Add --genlicense option to generate LICENSE file (Dan Book)

1.75    Thu Jun 14 12:53:47 EDT 2018
        * Update additional template URLs for consistency in tests

1.74    Tue Jun 12 18:15:20 EDT 2018
        * GH#66: Update default module template to link to metacpan (Dan Book)
        * GH#67: Update default module template to use HTTPS where appropriate (Chas. J. Owens IV)

1.73    Fri Aug 11 01:46:00 EDT 2017
        * Fix case where a distro name of '0' would be replaced by the first
          module name, confusing the tests (Dan Book)
        * Use Module::Runtime instead of string eval (Dan Book)

1.72    Sat Mar 25 21:20:41 EDT 2017
        * Stable release containing previous fixes

1.71_01 Thu Mar 23 23:04:11 EDT 2017
        * GH#51: drop use of Module::Build::Compat in Build.PL (Karen
          Etheridge)
        * GH#56: Fix generated syntax errors when using --fatalize (Dan Book)