@@ -2,6 +2,7 @@ Revision history for Perl extension Module::Starter
 
 {{$NEXT}}
 
+        * `--force` will only overwrite files it needs to generate.
         * Minimum perl version in generated distros (and Module::Starter) is 5.8.3
         * GH #25: Multiple authors are now supported. (Hunter McMillen)
         * GH #84: `Module::Starter::Simple::create_distro()` now returns files created.
